syntax = "proto3";
// import "google/protobuf/empty.proto";

package products;

service ProductsService {
    rpc FindOne (ProductById) returns (Product);
    rpc FindAll (Empty) returns (AllProducts);
    rpc Delete (ProductById) returns (Empty);
    rpc Update (Product) returns (Product);
    rpc Create (ProductWithoutId) returns (Product);
}
// returns (google.protobuf.Empty)
message Empty {}

message AllProducts {
    repeated Product products = 1;
}

message ProductById {
    int64 id = 1;
}

message ProductWithoutId {
    string name = 1;
    int64 cost = 2;
}

message Product {
    int64 id = 1;
    string name = 2;
    int64 cost = 3;
}
